# mgpt-1.0.0

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
doc/: Makefile.am  Makefile.in
doc/perturbations/: Makefile.am  Makefile.in
doc/perturbations/mgpt/: Makefile.am  Makefile.in  mgpt.1  mgpt.info  mgpt.texi
src/: Makefile.am  Makefile.in
src/general_libs/: Makefile.am  Makefile.in
src/general_libs/general/: Makefile.am  Makefile.in
src/general_libs/io/: Makefile.am  Makefile.in  inout.c  inout.h
src/general_libs/math/: Makefile.am  Makefile.in  diffeqs.c  diffeqs.h  mathfns.c  mathfns.h  mathutil.c  mathutil.h  numrec.c  numrec.h  quads.c  quads.h
src/perturbations/: Makefile.in
src/perturbations/mgpt/: Makefile.am  Makefile.in  cmdline_defs.h  data_struc_defs.h  globaldefs.h  main.c  mglpt.c  mglpt_diffeqs.c  mglpt_fns.c  mglpt_io.c  mglpt_postprocess.c  mglpt_quads.c  mglpt_quads_lcdm.c  mgpt.c  mgpt_diffeqs.c  mgpt_io.c  mgpt_postprocess.c  mgpt_quads.c  models.c  models.h  models_user.h  protodefs.h  startrun.c
tests/perturbations/mgpt/: BLi_matterpower_Extended.in  readme
